<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OlxStackExchange</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    
    <!-- Sidebar MenuItem -->
    <string name="smenu_name">Pakorn Pamualsap</string>
    <string name="smenu_version">Version V1.0</string>
    <string name="smenu_yoursite">your sites</string>
    <string name="smenu_stackoverflow">Stack Overflow</string>
    <string name="smenu_other">other</string>
    <string name="smenu_help">Help</string>
    <string name="smenu_setting">Settings</string>
    
    <!-- StackOverFlow Page -->
    <string name="stxt_simple">Simple</string>
    <string name="stxt_score">Score: </string>
    <string name="stxt_answer">Answer: </string>
    <string name="stxt_search">Search Questions...</string>
    
</resources>
