<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/txt_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/stxt_simple"
        android:textColor="@color/color_dark_light_blue"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/stxt_score"
            android:textColor="@color/color_dark_gray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txt_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:text="@string/stxt_score"
            android:textColor="@color/color_dark_gray"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center_vertical"
            android:text="@string/stxt_answer"
            android:textColor="@color/color_dark_gray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txt_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:text="@string/stxt_answer"
            android:textColor="@color/color_dark_gray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txt_platform"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center_vertical"
            android:text="@string/stxt_answer"
            android:textColor="@color/color_light_gray"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>